Fixed spacing on generated password output

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ button {
     height: 2.5rem;
     width: 300px;
     text-align: center;
+    padding: 0 10px;
 }
 
 #pswlength {
